[package]
name = "bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
tokio = {version="1.28.2", features=["rt", "macros", "rt-multi-thread"]}
zbus ={ version = "3.13.1", default-features = false, features=[ "tokio"]}


[features]
default = ["tokio"]
tokio = []
